# voice-control-for-a-robot-system

./: .gitignore  CHANGELOG.md  CHANGES.md  Cargo.toml  IMPLEMENTATION_GUIDE.py  MIGRATION_SUMMARY.md  MODERNIZATION_SUMMARY.md  QUICK_START.md  README.md  README_NATIVE.md  TESTING.md  VoiceControl.spec  audio_engine.py  audio_engine_v2.py  audio_processor.py  build.ps1  build.py  build_v2.py  command_hotword_manager.py  command_manager.py  commands to input.txt  commands.json  commands_hotwords.json  commands_hotwords.json.bak  config.json  demo_enhanced_features.py  deployment_builder.py  file_monitor.py  gui_demo.py  gui_demo_material.py  hotword_manager.py  launcher.py  local_model_manager.py  main.py  main_app.py  main_original.py  main_voice_app.py  main_voice_app_backup.py  model_embedder.py  model_manager.py  (+24 more)
.devcontainer/: devcontainer.json
.github/workflows/: build-native-windows.yml  build-windows-exe.yml
VoiceControlApp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  VoiceControlApp.csproj  appsettings.json
VoiceControlApp.Tests/: CommandProcessingServiceTests.cs  VoiceControlApp.Tests.csproj
VoiceControlApp/Services/: AudioService.cs  CommandProcessingService.cs  (+6 more)
assets/: README.md  fonts.md
docs/: BUILD_GUIDE.md  CODESPACES_GUIDE.md  VALIDATION_REPORT.md
examples/: demo.py
local_models/: models_info.json
runtime_hooks/: __init__.py  hook_com_init.py  hook_env_setup.py
src/: audio.rs  config.rs  file_output.rs  main.rs  memory_monitor.rs  simple_file_monitor.py  simple_nlp_processor.py  simple_voice_processor.py  speech.rs  ui.rs  utils.rs
tests/: simple_tests.py
(+1 files in other folders)
