[package]
name = "voice_control_native"
version = "2.0.0"
edition = "2021"
description = "Native Windows Voice Control Application with Fluent Design UI"
license = "MIT"

[dependencies]
# Windows-specific dependencies
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus", 
    "Win32_Media_Audio",
    "Win32_Media_Speech",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading"
] }

# UI Framework - using eframe/egui for immediate mode GUI with good Windows integration
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# Audio processing
cpal = "0.15"  # Cross-platform audio library
hound = "3.5"   # WAV file I/O
dasp = "0.11"   # Audio sample processing

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1" # Logging
tracing-subscriber = "0.3"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File I/O and monitoring
notify = "6.1"  # File system watcher
anyhow = "1.0"  # Error handling

# Memory usage monitoring
sysinfo = "0.31"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
# Windows-specific speech recognition
tts = "0.26"  # Text-to-speech (can be extended for speech recognition)

[features]
default = []

[[bin]]
name = "voice_control_native"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
